--- a/src/main/resources/com/example/laba1/hello-view.fxml
+++ b/src/main/resources/com/example/laba1/hello-view.fxml
@@ -30,7 +30,7 @@
                <font>
                    <Font size="20.0" />
                </font></Button>
-           <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="83.0" styleClass="button_param" stylesheets="@button-calkul.css" text="CE" GridPane.columnIndex="1" GridPane.rowIndex="0">
+           <Button mnemonicParsing="false" onAction="#clearClick" prefHeight="44.0" prefWidth="83.0" styleClass="button_param" stylesheets="@button-calkul.css" text="CE" GridPane.columnIndex="1" GridPane.rowIndex="0">
                <font>
                    <Font size="20.0" />
                </font>
@@ -146,42 +146,43 @@
                <Font name="Segoe UI Semibold" size="48.0" />
            </font>
        </Label>
-       <GridPane layoutX="147.0" layoutY="170.0" prefHeight="27.0" prefWidth="405.0" AnchorPane.bottomAnchor="305.0"
-                 AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="170.0">
+       <GridPane layoutX="147.0" layoutY="170.0" prefHeight="27.0" prefWidth="405.0" AnchorPane.bottomAnchor="305.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="170.0">
            <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
            </columnConstraints>
            <rowConstraints>
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 
            </rowConstraints>
-           <Button fx:id="memClear" mnemonicParsing="false" onAction="#memoryClear" prefHeight="31.0" prefWidth="64.0"
-                   styleClass="but-memory" text="МС" GridPane.columnIndex="0" disable="true"/>
-           <Button fx:id="memRead" mnemonicParsing="false" onAction="#memoryRead" prefHeight="30.0" prefWidth="66.0"
-                   styleClass="but-memory" text="MR" GridPane.columnIndex="1" disable="true"/>
-           <Button fx:id="memPlus" mnemonicParsing="false" onAction="#memoryPlus" prefHeight="34.0" prefWidth="66.0"
-                   styleClass="but-memory" text="M+" GridPane.columnIndex="2"/>
-           <Button fx:id="memMinus" mnemonicParsing="false" onAction="#memoryMinus" prefHeight="40.0" prefWidth="82.0"
-                   styleClass="but-memory" text="M-" GridPane.columnIndex="3"/>
-           <Button fx:id="memSave" mnemonicParsing="false" onAction="#memorySave" prefHeight="46.0" prefWidth="91.0"
-                   styleClass="but-memory" text="MS" GridPane.columnIndex="4"/>
-           <Button fx:id="memCheck" mnemonicParsing="false" onAction="#memoryCheck" prefHeight="79.0" prefWidth="94.0"
-                   styleClass="but-memory" text="M" GridPane.columnIndex="5" disable="true"/>
+           <Button fx:id="memClear" disable="true" mnemonicParsing="false" onAction="#memoryClear" prefHeight="31.0" prefWidth="64.0" styleClass="but-memory" text="МС" GridPane.columnIndex="0" />
+           <Button fx:id="memRead" disable="true" mnemonicParsing="false" onAction="#memoryRead" prefHeight="30.0" prefWidth="66.0" styleClass="but-memory" text="MR" GridPane.columnIndex="1" />
+           <Button fx:id="memPlus" mnemonicParsing="false" onAction="#memoryPlus" prefHeight="34.0" prefWidth="66.0" styleClass="but-memory" text="M+" GridPane.columnIndex="2" />
+           <Button fx:id="memMinus" mnemonicParsing="false" onAction="#memoryMinus" prefHeight="40.0" prefWidth="82.0" styleClass="but-memory" text="M-" GridPane.columnIndex="3" />
+           <Button fx:id="memSave" mnemonicParsing="false" onAction="#memorySave" prefHeight="46.0" prefWidth="91.0" styleClass="but-memory" text="MS" GridPane.columnIndex="4" />
+           <Button fx:id="memCheck" disable="true" mnemonicParsing="false" onAction="#memoryCheck" prefHeight="79.0" prefWidth="94.0" styleClass="but-memory" text="M" GridPane.columnIndex="5" />
        </GridPane>
        <Label fx:id="str" alignment="TOP_RIGHT" layoutX="93.0" layoutY="56.0" prefHeight="27.0" prefWidth="234.0" textAlignment="RIGHT" textFill="#616161" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="55.0">
            <font>
                <Font size="17.0" />
            </font></Label>
-       <Button layoutX="269.0" layoutY="11.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="47.0" stylesheets="@button-calkul.css" AnchorPane.bottomAnchor="447.0" AnchorPane.leftAnchor="269.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="11.0">
+       <Button fx:id="historyBut" layoutX="269.0" layoutY="11.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="47.0" stylesheets="@button-calkul.css" AnchorPane.bottomAnchor="447.0" AnchorPane.leftAnchor="269.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="11.0">
            <styleClass>
                <String fx:value="but-memory" />
                <String fx:value="history" />
            </styleClass>
        </Button>
    </AnchorPane>
+   <AnchorPane fx:id="blackPane" prefHeight="502.0" prefWidth="330.0" style="-fx-background-color: #000000;" visible="false" />
+    <AnchorPane fx:id="historyPane" layoutY="215.0" prefHeight="293.0" prefWidth="330.0" styleClass="background"
+                stylesheets="@button-calkul.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <ScrollPane prefHeight="293.0" prefWidth="330.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                    AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <ListView fx:id="hs" prefHeight="340.0" prefWidth="313.0"/>
+        </ScrollPane>
+    </AnchorPane>
 </AnchorPane>
